@@ -9,11 +9,11 @@ import com.NTG.Cridir.repository.CustomerRepository;
 import com.NTG.Cridir.repository.ProviderRepository;
 import com.NTG.Cridir.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 @Service
-
 public class AuthService {
 
     private final UserRepository userRepository;
@@ -21,6 +21,7 @@ public class AuthService {
     private final ProviderRepository providerRepository;
     private final PasswordEncoder passwordEncoder;
     private final JwtService jwtService;
+
     @Autowired
     public AuthService(UserRepository userRepository,
                        CustomerRepository customerRepository,
@@ -34,92 +35,69 @@ public class AuthService {
         this.jwtService = jwtService;
     }
 
-
-
     public AuthResponse signup(SignupRequest request) {
-        // Check email uniqueness
+        // email uniqueness
         if (userRepository.existsByEmail(request.email())) {
             throw new RuntimeException("Email already in use");
         }
-
-        // Validate password strength
-        if (request.password().length() < 6 || !request.password().matches(".*\\d.*") || !request.password().matches(".*[a-zA-Z].*")) {
-            throw new RuntimeException("Password must be at least 6 characters and contain both letters and numbers");
+        // password checks
+        if (request.password().length() < 6
+                || !request.password().matches(".*\\d.*")
+                || !request.password().matches(".*[a-zA-Z].*")) {
+            throw new RuntimeException("Password must be at least 6 characters and contain letters and numbers");
         }
-
-        // Validate Egyptian phone number (must be 11 digits and start with 010, 011, 012, or 015)
+        // Egyptian phone format
         if (!request.phone().matches("^(010|011|012|015)[0-9]{8}$")) {
-            throw new RuntimeException("Phone number must be 11 digits and start with 01 ");
+            throw new RuntimeException("Phone number must be 11 digits and start with 010/011/012/015");
         }
 
-        // Check phone uniqueness for customer or provider
-        if (request.role() == Role.CUSTOMER && customerRepository.findAll()
-                .stream().anyMatch(c -> c.getPhone().equals(request.phone()))) {
-            throw new RuntimeException("Phone number already in use by another customer");
-        }
-        if (request.role() == Role.PROVIDER && providerRepository.findAll()
-                .stream().anyMatch(p -> p.getPhone().equals(request.phone()))) {
-            throw new RuntimeException("Phone number already in use by another provider");
-        }
-
-        // Create and save user
+        // Create base user
         User user = new User();
         user.setEmail(request.email());
         user.setPassword(passwordEncoder.encode(request.password()));
         user.setRole(request.role());
+        user.setName(request.name());
+        user.setPhone(request.phone());
 
-        user = userRepository.save(user);
-
-        // 6. Save role-specific details
-        switch (request.role()) {
-            case CUSTOMER -> {
-                Customer customer = new Customer();
-                customer.setUser(user);
-                customer.setName(request.name());
-                customer.setPhone(request.phone());
-                customerRepository.save(customer);
-            }
-            case PROVIDER -> {
-                Provider provider = new Provider();
-                provider.setUser(user);
-                provider.setName(request.name());
-                provider.setPhone(request.phone());
-                providerRepository.save(provider);
-            }
-            default -> throw new RuntimeException("Invalid role provided");
+        try {
+            user = userRepository.save(user);
+        } catch (DataIntegrityViolationException ex) {
+            // covers unique(phone) as well
+            throw new RuntimeException("Email or phone already in use");
         }
 
-        // 7. Generate token
-        String token = jwtService.generateToken(user);
+        // Create role entity
+        if (request.role() == Role.CUSTOMER) {
+            Customer c = new Customer();
+            c.setUser(user);
+            customerRepository.save(c);
+        } else if (request.role() == Role.PROVIDER) {
+            Provider p = new Provider();
+            p.setUser(user);
+            providerRepository.save(p);
+        } else {
+            throw new RuntimeException("Invalid role provided");
+        }
 
-        // 8. Return AuthResponse
+        String token = jwtService.generateToken(user);
         return new AuthResponse(user.getUserId(), user.getEmail(), user.getRole(), token);
     }
 
-
-
     public AuthResponse login(LoginRequest request) {
-        // Validate password is not blank
-        if (request.password() == null || request.password().trim().isEmpty()) {
+        if (request.password() == null || request.password().isBlank()) {
             throw new RuntimeException("Password cannot be empty");
         }
 
-        // Find user by email
         User user = userRepository.findByEmail(request.email())
                 .orElseThrow(() -> new RuntimeException("Invalid email or password"));
 
-        // Match password
         if (!passwordEncoder.matches(request.password(), user.getPassword())) {
             throw new RuntimeException("Invalid email or password");
         }
 
-        // Generate JWT token
         String token = jwtService.generateToken(user);
-
-        // Return response
         return new AuthResponse(user.getUserId(), user.getEmail(), user.getRole(), token);
     }
-
 
     public void resetPassword(ResetPasswordRequest request) {
         User user = userRepository.findByEmail(request.email())
@@ -132,5 +110,4 @@ public class AuthService {
         user.setPassword(passwordEncoder.encode(request.newPassword()));
         userRepository.save(user);
     }
-
 }
